--- a/index.html
+++ b/index.html
@@ -66,6 +66,64 @@
          <p class="bussiness">Sign up to deliver</p>
       </div>
       <div class="blank_f"></div>
+      <div class="main_cntnt">
+         <div class="cities"><h2>Cities near me</h2></div>
+         <div class="map"></div>
+         <div class="grid_chamber">
+            <div class="gr">Albuquerque</div>
+            <div class="gr">Concord</div>
+            <div class="gr">Houston</div>
+            <div class="gr">Indianapolis</div>
+            <div class="gr">Mesa</div>
+            <div class="gr">Milwaukee</div>
+            <div class="gr">Nashville</div>
+            <div class="gr">Oklahoma City</div>
+            <div class="gr">Providence</div>
+            <div class="gr">Queens</div>
+            <div class="gr">Tucson</div>
+            <div class="gr">West Hollywood</div>
+         </div>
+         <div class="blank_g"></div>
+         <div class="gr_p">View all 500+ cities</div>
+      </div>
+      <div class="blank_g"></div>
+      <div class="main_cntnt_b">
+         <div class="cities"><h2>Countries with Uber Eats</h2></div>
+         <div class="grid_chamber_2">
+            <div class="gr">Australia</div>
+            <div class="gr">Belgium</div>
+            <div class="gr">Cananda</div>
+            <div class="gr">Chile</div>
+            <div class="gr">Costa Rica</div>
+            <div class="gr">Domanican Republic</div>
+            <div class="gr">Ecuador</div>
+            <div class="gr">El Salvador</div>
+            <div class="gr">France</div>
+            <div class="gr">Germany</div>
+            <div class="gr">Guatemala</div>
+            <div class="gr">Ireland</div>
+            <div class="gr">Italy</div>
+            <div class="gr">Japan</div>
+            <div class="gr">Kenya</div>
+            <div class="gr">Luxembourg</div>
+            <div class="gr">Mexico</div>
+            <div class="gr">Netherlands</div>
+            <div class="gr">New Zealand</div>
+            <!-- <div class="gr"></div> -->
+            <div class="gr">Panama</div>
+            <div class="gr">Poland</div>
+            <div class="gr">Portugal</div>
+            <div class="gr">South Africa</div>
+            <div class="gr">Spain</div>
+            <div class="gr">Sri Lanka</div>
+            <div class="gr">Sweden</div>
+            <div class="gr">Switzerland</div>
+            <div class="gr">Taiwan(ROC)</div>
+            <div class="gr">United Kingdom</div>
+            <div class="gr">United States</div>
+         </div>
+         <div class="gr_p">View all countries</div>
+      </div>   
    </section>
 </body>  
 </html>
