--- a/index.html
+++ b/index.html
@@ -125,5 +125,12 @@
          <div class="gr_p">View all countries</div>
       </div>   
    </section>
+   <section class="footer">
+      <div class="im_uber"></div>
+      <div class="appstore"></div>
+      <div class="help"></div>
+      <div class="near_me"></div>
+      <div class="facebook"></div>
+   </section>
 </body>  
 </html>
